# colorum

./: Cargo.toml  README.md  names.txt  tokei.txt
src/: app.rs  build.rs  color_types.rs  colors.rs  colors_helper.rs  github_colors.rs  hex.rs  hindi_colors.rs  lib.rs  main.rs  messages.rs  names.rs  national_colors.rs  pantone_colors.rs  rgb.rs  src.rs  util.rs
src/app_gui/: app_helpers.rs  mod.rs  subscription.rs  update.rs  view.rs
src/app_gui/view/: helpers.rs  mod.rs  name_picker.rs  view.rs
src/brand/: mod.rs
src/colors/: brand_colors.rs  canadian_provinces.rs  css.rs  css_colors.rs  github_colors.rs  hindi_colors.rs  italianbrand_colors.rs  kelvin_colors.rs  metals_flame_colors.rs  mod.rs  national_colors.rs  pantone_colors.rs  persian_colors.rs  ral_colors.rs  seasons.rs  xkcd.rs  xkcd_colors.rs
src/colors_helper/: catalog.rs  mod.rs  palette_registry.rs  search.rs  sort.rs  ui.rs
src/core/: color_types.rs  hex.rs  mod.rs  rgb.rs
src/ui/: messages.rs  mod.rs
src/ui/app_gui/: app_helpers.rs  mod.rs  subscription.rs  update.rs
src/ui/app_gui/view/: mod.rs  name_picker.rs  view.rs
src/ui/widgets/: color_wheel.rs  combined_wheel.rs
src/widgets/: color_wheel.rs  combined_wheel.rs  mod.rs
