[package]
name = "rust_colors"
version = "0.2.1"
edition = "2024"


[features]
profile = []
default = []
github-colors = []

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
phf = { version = "0.11.3", features = ["macros"] }
iced = { version = "0.13", features = ["advanced", "canvas"] }
hex = "0.4.3"
once_cell = "1.21.3"